fixed issue with cutoff results

--- a/css/sass/ytstyle.scss
+++ b/css/sass/ytstyle.scss
@@ -2016,6 +2016,7 @@ button.toggleBookFilter, button.toggleMap {
 	color: white;
 	margin-top: 100px;
 	.results {
+		padding-bottom: 200px;
 		h3 {
 			margin-top: 60px;
 		}
